# byte-communication

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
ByteCommunication/: ByteCommunication.vcxproj  ByteCommunication.vcxproj.filters  ByteEncoder.cpp  ByteEncoder.h  CMakeLists.txt  Communicator.cpp  Communicator.h  HammingEncoder.h  SStreamReader.cpp  SStreamReader.h
ByteCommunicationTest/: ByteChannelIO.cpp  ByteChannelTest.cpp  ByteCommunicationTest.vcxproj  ByteEncoderTest.cpp  CMakeLists.txt  DataPacketTest.cpp  HammingEncoderTest.cpp  SStreamReaderTest.cpp  helpers.h
